[package]
name = "puzzle"
version = "0.1.0"
authors = ["doomy <2640792-_doomy@users.noreply.gitlab.com>"]
edition = "2021"

[lib]
name = "pz"

[dependencies]
serde = "*"
ron = "*"
anyhow = "*"
rand = {version = "*"}
tracing = "0.1.29"
lyon_geom = "0.17"

[dependencies.bevy]
version = "0.6"
default_features = true

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

[dependencies.bevy_kira_audio]
branch = "bevy_main"
git = "https://github.com/piedoom/bevy_kira_audio"

[dependencies.bevy_egui]
branch = "main"
git = "https://github.com/mvlabat/bevy_egui"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-events = "0.1"
futures = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"

[patch.crates-io]
bevy = { git = 'https://github.com/bevyengine/bevy', branch = "main" }

[build-dependencies]
serde = "*"
ron = "*"