[package]
authors = ["doomy <2640792-_doomy@users.noreply.gitlab.com>"]
edition = "2021"
name = "puzzle"
version = "0.1.0"
[build-dependencies]
ron = "*"
serde = "*"

[dependencies]
anyhow = "*"
dotenv = "0.15"
futures-lite = "1.12"
lyon_geom = "0.17"
ron = "*"
serde = "*"
serde_json = "1.0"
surf = { version = "2.3", default_features = false, features = ["default-client"] }
tracing = "0.1.29"

[dependencies.bevy]
default_features = true
version = "0.6"

[dependencies.bevy_egui]
branch = "main"
git = "https://github.com/mvlabat/bevy_egui"

[dependencies.bevy_kira_audio]
branch = "bevy_main"
git = "https://github.com/piedoom/bevy_kira_audio"

[dependencies.chrono]
features = ["serde", "wasmbind"]
version = "0.4"

[dependencies.rand]
version = "*"

[lib]
name = "pz"

[patch]
[patch.crates-io]
[patch.crates-io.bevy]
branch = "main"
git = "https://github.com/bevyengine/bevy"

[target]
[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))"]
[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies]
futures = "0.3"
gloo-events = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"
